sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:15: error: ';' expected but 'else' found.
    }else{
     ^AlgGnomeSort:25: error: Unmatched closing brace '}' ignored here
}
^